--- a/index.html
+++ b/index.html
@@ -40,18 +40,38 @@
         </div>
         <div class="row no-gutters">
           <div class="col-lg-4">
+            <a class="portfolio-item" href="https://patmayumi.github.io/michelin_300x250/" target="_blank">
+              <img class="img-fluid" src="img/banner_300x250_michelin.jpg" alt="Banner 300x250 Michelin">
+            </a>
+          </div>
+          <div class="col-lg-4">
+            <a class="portfolio-item" href="https://patmayumi.github.io/samsung_gear_300x250/" target="_blank">
+              <img class="img-fluid" src="img/banner_300x250_samsungGear.jpg" alt="Banner 300x250 Samsung Gear">
+            </a>
+          </div>
+          <div class="col-lg-4">
+            <a class="portfolio-item" href="https://patmayumi.github.io/samsung_intel_300x250/" target="_blank">
+              <img class="img-fluid" src="img/banner_300x250_samsungIntel.jpg" alt="Banner 300x250 Samsung Intel">
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+      	<br>
+        <div class="row no-gutters">
+          <div class="col-lg-4">
             <a class="portfolio-item" href="https://patmayumi.github.io/samsung_familiaB_300x250/" target="_blank">
-              <img class="img-fluid" src="img/banner_300x250_samsung.jpg" alt="">
+              <img class="img-fluid" src="img/banner_300x250_samsung.jpg" alt="Banner 300x250 Samsung">
             </a>
           </div>
           <div class="col-lg-4">
             <a class="portfolio-item" href="https://patmayumi.github.io/volvoV60_300x600_940x600/" target="_blank">
-              <img class="img-fluid" src="img/banner_300x250_volvo.jpg" alt="">
+              <img class="img-fluid" src="img/banner_300x250_volvo.jpg" alt="Banner 300x600 Volvo">
             </a>
           </div>
           <div class="col-lg-4">
             <a class="portfolio-item" href="https://patmayumi.github.io/corega_300x250/" target="_blank">
-              <img class="img-fluid" src="img/banner_300x250_corega.jpg" alt="">
+              <img class="img-fluid" src="img/banner_300x250_corega.jpg" alt="Banner 300x250 Corega">
             </a>
           </div>
         </div>
