--- a/index.html
+++ b/index.html
@@ -36,14 +36,9 @@
     <section class="content-section" id="portfolio">
       <div class="container">
         <div class="content-section-heading text-center">
-          <h2 class="mb-5">BANNERS PROJECTS</h2>
+          <h2 class="mb-5">ANIMATED ADS</h2>
         </div>
         <div class="row no-gutters">
-          <div class="col-lg-4">
-            <a class="portfolio-item" href="https://patmayumi.github.io/michelin_300x250/" target="_blank">
-              <img class="img-fluid" src="img/banner_300x250_michelin.jpg" alt="Banner 300x250 Michelin">
-            </a>
-          </div>
           <div class="col-lg-4">
             <a class="portfolio-item" href="https://patmayumi.github.io/samsung_gear_300x250/" target="_blank">
               <img class="img-fluid" src="img/banner_300x250_samsungGear.jpg" alt="Banner 300x250 Samsung Gear">
@@ -52,6 +47,11 @@
           <div class="col-lg-4">
             <a class="portfolio-item" href="https://patmayumi.github.io/samsung_intel_300x250/" target="_blank">
               <img class="img-fluid" src="img/banner_300x250_samsungIntel.jpg" alt="Banner 300x250 Samsung Intel">
+            </a>
+          </div>
+          <div class="col-lg-4">
+            <a class="portfolio-item" href="https://patmayumi.github.io/corega_300x250/" target="_blank">
+              <img class="img-fluid" src="img/banner_300x250_corega.jpg" alt="Banner 300x250 Corega">
             </a>
           </div>
         </div>
@@ -69,11 +69,6 @@
               <img class="img-fluid" src="img/banner_300x250_volvo.jpg" alt="Banner 300x600 Volvo">
             </a>
           </div>
-          <div class="col-lg-4">
-            <a class="portfolio-item" href="https://patmayumi.github.io/corega_300x250/" target="_blank">
-              <img class="img-fluid" src="img/banner_300x250_corega.jpg" alt="Banner 300x250 Corega">
-            </a>
-          </div>
         </div>
       </div>
     </section>
@@ -82,7 +77,7 @@
     <section class="content-section" id="portfolio">
       <div class="container">
         <div class="content-section-heading text-center">
-          <h2 class="mb-5">SITE PROJECTS</h2>
+          <h2 class="mb-5">WEBSITES</h2>
         </div>
         <div class="row no-gutters">
           <div class="col-lg-4">
