--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Patricia Mayumi | Digital Designer</title>
+<title>Patricia Mayumi Yoshiwara| Digital Designer</title>
 <meta name="description" content="">
 <meta name="author" content="">
 
@@ -185,7 +185,7 @@
       <div class="col-md-8">
         <div class="about-text">
           <h3>Hello! :)</h3>
-          <p>My name's Patricia Mayumi, nice to meet you! I am a Digital Designer with 5+ years of experience in web services.</p>
+          <p>My name's Patricia Mayumi Yoshiwara, nice to meet you! I am a Digital Designer with 5+ years of experience in web services.</p>
           <p>I design website layouts and develop HTML5 advertising banners.</p>
           <p>Feel free to <a href="mailto:contact@patriciamayumi.com">contact me</a>!</p>
         </div>
