--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Patricia Mayumi Yoshiwara| Digital Designer</title>
-<meta name="description" content="">
-<meta name="author" content="">
+<meta name="description" content="Digital designer with 6+ years of experience in web services, specializing in advertising HTML5 banners and WordPress websites."/>
+<meta name="author" content="Patricia Mayumi Yoshiwara">
 
 <!-- Bootstrap -->
 <link rel="stylesheet" type="text/css"  href="css/bootstrap.css">
