--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
       <div class="col-md-8">
         <div class="about-text">
           <h3>Hello! :)</h3>
-          <p>My name's Patricia Mayumi Yoshiwara, nice to meet you! I am a Digital Designer with 5+ years of experience in web services.</p>
+          <p>My name's Patricia Mayumi Yoshiwara, nice to meet you! I am a Digital Designer with 6+ years of experience in web services.</p>
           <p>I design website layouts and develop HTML5 advertising banners.</p>
           <p>Feel free to <a href="mailto:contact@patriciamayumi.com">contact me</a>!</p>
         </div>
@@ -200,6 +200,9 @@
             <li>Adobe Animate / Flash</li>
             <li>Adobe Premiere</li>
             <li>Adobe After Effects</li>
+            <li>Sketch App</li>
+            <li>Figma</li>
+            <li>Marvel App</li>
             <li>GSAP (GreenSock API)</li>
             <li>ZBrush</li>
           </ul>
@@ -226,7 +229,7 @@
 </div>
 <div id="footer">
   <div class="container">
-    <p>Copyright &copy; 2018.</p>
+    <p>Copyright &copy; 2019.</p>
   </div>
 </div>
 
