--- a/index.html
+++ b/index.html
@@ -89,6 +89,18 @@
     </div>
     <div class="row">
       <div class="portfolio-items">
+
+      	<div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 banners">
+          <div class="portfolio-item">
+            <div class="hover-bg"> <a href="https://patmayumi.github.io/redbull_stayfit_300x600/" target="_blank" title="Red Bull - Stay Fitr">
+              <div class="hover-text">
+                <h4>Red Bull - Banner 300x600</h4>
+                <p>HTML5 Banner / GWD</p>
+              </div>
+              <img src="img/portfolio/banner_300x250_redbull.jpeg" class="img-responsive portfolio-item-center" alt="Red Bull"> </a> </div>
+          </div>
+        </div>
+
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 webdesign">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="http://www.escolashaolin.com.br" target="_blank">
@@ -99,36 +111,40 @@
               <img src="img/portfolio/web_escolashaolin.png" class="img-responsive portfolio-item-center" alt="Escola de Kung Fu Shaolin do Norte"> </a> </div>
           </div>
         </div>
+
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 banners">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="https://patmayumi.github.io/volvoV60_300x600_940x600/" target="_blank" title="Volvo - Expand Banner">
               <div class="hover-text">
                 <h4>Volvo - Expand Banner</h4>
-                <p>HTML5 Banner</p>
+                <p>HTML5 Banner / GSAP</p>
               </div>
               <img src="img/portfolio/banner_300x250_volvo.jpg" class="img-responsive portfolio-item-center" alt="Volvo"> </a> </div>
           </div>
         </div>
+
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 banners">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="https://patmayumi.github.io/samsung_gear_300x250/" target="_blank" title="Samsung Galaxy S8 + Gear S3">
               <div class="hover-text">
                 <h4>Samsung - Banner 300x250</h4>
-                <p>HTML5 Banner</p>
+                <p>HTML5 Banner / GWD</p>
               </div>
               <img src="img/portfolio/banner_300x250_samsungGear.jpg" class="img-responsive portfolio-item-center" alt="Samsung Galaxy S8 + Gear S3"> </a> </div>
           </div>
         </div>
+
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 banners">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="https://patmayumi.github.io/samsung_familiaB_160x600/" target="_blank" title="Samsung Galaxy J">
               <div class="hover-text">
                 <h4>Samsung - Banner 160x600</h4>
-                <p>HTML5 Banner</p>
+                <p>HTML5 Banner / GWD</p>
               </div>
               <img src="img/portfolio/banner_300x250_samsung.jpg" class="img-responsive portfolio-item-center" alt="Samsung Galaxy J"> </a> </div>
           </div>
         </div>
+
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 webdesign">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="http://www.laticiniosecia.com.br" target="_blank">
@@ -139,6 +155,7 @@
               <img src="img/portfolio/web_laticiniosecia.png" class="img-responsive portfolio-item-center" alt="Laticínios & Cia"> </a> </div>
           </div>
         </div>
+
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 webdesign">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="http://www.edibelcontabilidade.com.br" target="_blank">
@@ -149,6 +166,7 @@
               <img src="img/portfolio/web_edibelcontabilidade.png" class="img-responsive portfolio-item-center" alt="Edibel Contabilidade"> </a> </div>
           </div>
         </div>
+
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 logos">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/logo_londrinaLimpa_lg.jpg" title="Londrina Limpa" rel="prettyPhoto">
@@ -159,16 +177,18 @@
               <img src="img/portfolio/logo_londrinaLimpa.jpg" class="img-responsive portfolio-item-center" alt="Londrinha Limpa"> </a> </div>
           </div>
         </div>
+
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 banners">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="https://patmayumi.github.io/corega_300x250/" target="_blank" title="Corega">
               <div class="hover-text">
                 <h4>Corega - Banner 300x250</h4>
-                <p>HTML5 Banner</p>
+                <p>HTML5 Banner / GSAP </p>
               </div>
               <img src="img/portfolio/banner_300x250_corega.jpg" class="img-responsive portfolio-item-center" alt="Corega"> </a> </div>
           </div>
         </div>
+
       </div>
     </div>
   </div>
