--- a/index.html
+++ b/index.html
@@ -147,23 +147,23 @@
 
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 webdesign">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="http://www.laticiniosecia.com.br" target="_blank">
+            <div class="hover-bg"> <a href="http://www.lagoagastro.com.br" target="_blank">
               <div class="hover-text">
-                <h4>Laticínios & Cia</h4>
+                <h4>Lagoa Gastrô</h4>
                 <p>Web Design</p>
               </div>
-              <img src="img/portfolio/web_laticiniosecia.png" class="img-responsive portfolio-item-center" alt="Laticínios & Cia"> </a> </div>
+              <img src="img/portfolio/web_lagoagastro.png" class="img-responsive portfolio-item-center" alt="Lagoa Gastro"> </a> </div>
           </div>
         </div>
 
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 webdesign">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="http://www.edibelcontabilidade.com.br" target="_blank">
+            <div class="hover-bg"> <a href="http://www.leveminas.com.br" target="_blank">
               <div class="hover-text">
-                <h4>Edibel Contabilidade</h4>
+                <h4>Leve Minas</h4>
                 <p>Web Design</p>
               </div>
-              <img src="img/portfolio/web_edibelcontabilidade.png" class="img-responsive portfolio-item-center" alt="Edibel Contabilidade"> </a> </div>
+              <img src="img/portfolio/web_leveminas.png" class="img-responsive portfolio-item-center" alt="Leve Minas"> </a> </div>
           </div>
         </div>
 
