--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Patricia Mayumi Yoshiwara| Digital Designer</title>
-<meta name="description" content="Digital designer with 6+ years of experience in web services, specializing in advertising HTML5 banners and WordPress websites."/>
+<meta name="description" content="Digital designer with 6+ years of experience in web services, specializing in advertising HTML5 banners and UI layouts websites."/>
 <meta name="author" content="Patricia Mayumi Yoshiwara">
 
 <!-- Bootstrap -->
@@ -81,7 +81,6 @@
             <li><a href="#" data-filter="*" class="active">All</a></li>
             <li><a href="#" data-filter=".webdesign">Web Design</a></li>
             <li><a href="#" data-filter=".banners">HTML5 Banners</a></li>
-            <li><a href="#" data-filter=".logos">Logos</a></li>
           </ol>
         </li>
       </ul>
@@ -101,6 +100,28 @@
           </div>
         </div>
 
+        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 banners">
+          <div class="portfolio-item">
+            <div class="hover-bg"> <a href="https://patmayumi.github.io/redbull_amaphiko_970x250/" target="_blank" title="Red Bull - Amaphiko">
+              <div class="hover-text">
+                <h4>Red Bull - Banner 970x250</h4>
+                <p>HTML5 Banner / GWD</p>
+              </div>
+              <img src="img/portfolio/banner_300x250_redbull_amaphiko.jpg" class="img-responsive portfolio-item-center" alt="Red Bull"> </a> </div>
+          </div>
+        </div>
+
+      	<div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 banners">
+          <div class="portfolio-item">
+            <div class="hover-bg"> <a href="https://patmayumi.github.io/redbull_man_970x250/" target="_blank" title="Red Bull - Man">
+              <div class="hover-text">
+                <h4>Red Bull - Banner 970x250</h4>
+                <p>HTML5 Banner / GSAP</p>
+              </div>
+              <img src="img/portfolio/banner_300x250_redbull_man.jpg" class="img-responsive portfolio-item-center" alt="Red Bull"> </a> </div>
+          </div>
+        </div>
+
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 webdesign">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="http://www.escolashaolin.com.br" target="_blank">
@@ -109,6 +130,17 @@
                 <p>Web Design</p>
               </div>
               <img src="img/portfolio/web_escolashaolin.png" class="img-responsive portfolio-item-center" alt="Escola de Kung Fu Shaolin do Norte"> </a> </div>
+          </div>
+        </div>
+
+        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 banners">
+          <div class="portfolio-item">
+            <div class="hover-bg"> <a href="https://patmayumi.github.io/samsung_smart_480x320/" target="_blank" title="Red Bull - Man">
+              <div class="hover-text">
+                <h4>Samsung - Banner 480x320</h4>
+                <p>HTML5 Banner / GSAP</p>
+              </div>
+              <img src="img/portfolio/banner_300x250_samsung_smart.jpg" class="img-responsive portfolio-item-center" alt="Samsung"> </a> </div>
           </div>
         </div>
 
@@ -123,14 +155,14 @@
           </div>
         </div>
 
-        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 banners">
+        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 webdesign">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="https://patmayumi.github.io/samsung_gear_300x250/" target="_blank" title="Samsung Galaxy S8 + Gear S3">
+            <div class="hover-bg"> <a href="http://www.lagoagastro.com.br" target="_blank">
               <div class="hover-text">
-                <h4>Samsung - Banner 300x250</h4>
-                <p>HTML5 Banner / GWD</p>
+                <h4>Lagoa Gastrô</h4>
+                <p>Web Design</p>
               </div>
-              <img src="img/portfolio/banner_300x250_samsungGear.jpg" class="img-responsive portfolio-item-center" alt="Samsung Galaxy S8 + Gear S3"> </a> </div>
+              <img src="img/portfolio/web_lagoagastro.png" class="img-responsive portfolio-item-center" alt="Lagoa Gastro"> </a> </div>
           </div>
         </div>
 
@@ -147,17 +179,6 @@
 
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 webdesign">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="http://www.lagoagastro.com.br" target="_blank">
-              <div class="hover-text">
-                <h4>Lagoa Gastrô</h4>
-                <p>Web Design</p>
-              </div>
-              <img src="img/portfolio/web_lagoagastro.png" class="img-responsive portfolio-item-center" alt="Lagoa Gastro"> </a> </div>
-          </div>
-        </div>
-
-        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 webdesign">
-          <div class="portfolio-item">
             <div class="hover-bg"> <a href="http://www.leveminas.com.br" target="_blank">
               <div class="hover-text">
                 <h4>Leve Minas</h4>
@@ -166,29 +187,6 @@
               <img src="img/portfolio/web_leveminas.png" class="img-responsive portfolio-item-center" alt="Leve Minas"> </a> </div>
           </div>
         </div>
-
-        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 logos">
-          <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/logo_londrinaLimpa_lg.jpg" title="Londrina Limpa" rel="prettyPhoto">
-              <div class="hover-text">
-                <h4>Londrina Limpa</h4>
-                <p>Logo</p>
-              </div>
-              <img src="img/portfolio/logo_londrinaLimpa.jpg" class="img-responsive portfolio-item-center" alt="Londrinha Limpa"> </a> </div>
-          </div>
-        </div>
-
-        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 banners">
-          <div class="portfolio-item">
-            <div class="hover-bg"> <a href="https://patmayumi.github.io/corega_300x250/" target="_blank" title="Corega">
-              <div class="hover-text">
-                <h4>Corega - Banner 300x250</h4>
-                <p>HTML5 Banner / GSAP </p>
-              </div>
-              <img src="img/portfolio/banner_300x250_corega.jpg" class="img-responsive portfolio-item-center" alt="Corega"> </a> </div>
-          </div>
-        </div>
-
       </div>
     </div>
   </div>
