--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <li class="hidden"> <a href="#page-top"></a> </li>
         <li> <a href="https://www.artstation.com/patmayumi" target="_blank">Passion Projects</a> </li>
         <li> <a class="page-scroll" href="#works">Portfolio</a> </li>
+        <li> <a href="https://vimeo.com/372281355" target="_blank">Demo Reel</a> </li>
         <li> <a class="page-scroll" href="#about">About</a> </li>
         <li> <a class="page-scroll" href="#contact">Contact</a> </li>
       </ul>
@@ -104,6 +105,17 @@
 
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 banners">
           <div class="portfolio-item">
+            <div class="hover-bg"> <a href="https://patmayumi.github.io/michelin_300x250/" target="_blank" title="Red Bull - Stay Fitr">
+              <div class="hover-text">
+                <h4>Michelin - Banner 300x600</h4>
+                <p>HTML5 Banner / GWD</p>
+              </div>
+              <img src="img/portfolio/banner_300x250_michelin.jpg" class="img-responsive portfolio-item-center" alt="Michelin"> </a> </div>
+          </div>
+        </div>
+
+        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 banners">
+          <div class="portfolio-item">
             <div class="hover-bg"> <a href="https://patmayumi.github.io/redbull_amaphiko_970x250/" target="_blank" title="Red Bull - Amaphiko">
               <div class="hover-text">
                 <h4>Red Bull - Banner 970x250</h4>
@@ -132,17 +144,6 @@
                 <p>Web Design</p>
               </div>
               <img src="img/portfolio/web_escolashaolin.png" class="img-responsive portfolio-item-center" alt="Escola de Kung Fu Shaolin do Norte"> </a> </div>
-          </div>
-        </div>
-
-        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 mograph">
-          <div class="portfolio-item">
-            <div class="hover-bg"> <a href="https://raw.githubusercontent.com/patmayumi/portfolio/master/img/portfolio/mograph_redbull_office_run.mp4" target="_blank">
-              <div class="hover-text">
-                <h4>Redbull</h4>
-                <p>Motion Graphics</p>
-              </div>
-              <img src="img/portfolio/banner_300x250_redbull_office_run.jpeg" class="img-responsive portfolio-item-center" alt="Redbull"> </a> </div>
           </div>
         </div>
 
@@ -203,12 +204,12 @@
 
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 mograph">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="https://raw.githubusercontent.com/patmayumi/portfolio/master/img/portfolio/mograph_semparar_stories1_SP.mp4" target="_blank">
+            <div class="hover-bg"> <a href="https://vimeo.com/372281355" target="_blank">
               <div class="hover-text">
-                <h4>Sem Parar</h4>
+                <h4>Demo Reel</h4>
                 <p>Motion Graphics</p>
               </div>
-              <img src="img/portfolio/banner_300x250_semparar_stories1_SP.jpeg" class="img-responsive portfolio-item-center" alt="Sem Parar"> </a> </div>
+              <img src="img/portfolio/demoreel.jpg" class="img-responsive portfolio-item-center" alt="Patricia Mayumi Demo Reel"> </a> </div>
           </div>
         </div>
 
@@ -239,15 +240,15 @@
           <ul>
             <li>Adobe Photoshop</li>
             <li>Google Web Designer</li>
+            <li>GSAP (GreenSock API)</li>
             <li>WordPress</li>
             <li>Adobe Animate / Flash</li>
             <li>Adobe Premiere</li>
             <li>Adobe After Effects</li>
-            <li>Sketch App</li>
-            <li>Figma</li>
-            <li>Marvel App</li>
-            <li>GSAP (GreenSock API)</li>
+            <li>Sketch App / Figma</li>
+            <li>Marvel App</li> 
             <li>ZBrush</li>
+            <li>Blender 3D</li>
           </ul>
         </div>
       </div>
