--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Patricia Mayumi Yoshiwara| Digital Designer</title>
+<title>Patricia Mayumi Yoshiwara | Digital Designer</title>
 <meta name="description" content="Digital designer with 6+ years of experience in web services, specializing in advertising HTML5 banners and UI layouts websites."/>
 <meta name="author" content="Patricia Mayumi Yoshiwara">
 
@@ -81,8 +81,8 @@
         <li>
           <ol class="type">
             <li><a href="#" data-filter="*" class="active">All</a></li>
-            <li><a href="#" data-filter=".webdesign">Web Design</a></li>
             <li><a href="#" data-filter=".banners">HTML5 Banners</a></li>
+            <li><a href="#" data-filter=".webdesign">Web Design</a></li>
             <li><a href="#" data-filter=".mograph">Motion Graphics</a></li>
           </ol>
         </li>
@@ -114,6 +114,17 @@
           </div>
         </div>
 
+        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 webdesign">
+          <div class="portfolio-item">
+            <div class="hover-bg"> <a href="http://www.escolashaolin.com.br" target="_blank">
+              <div class="hover-text">
+                <h4>Escola de Kung Fu Shaolin do Norte</h4>
+                <p>Web Design</p>
+              </div>
+              <img src="img/portfolio/web_escolashaolin.png" class="img-responsive portfolio-item-center" alt="Escola de Kung Fu Shaolin do Norte"> </a> </div>
+          </div>
+        </div>
+
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 banners">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="https://patmayumi.github.io/redbull_amaphiko_970x250/" target="_blank" title="Red Bull - Amaphiko">
@@ -138,12 +149,12 @@
 
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 webdesign">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="http://www.escolashaolin.com.br" target="_blank">
+            <div class="hover-bg"> <a href="http://www.curtalagoa.com.br" target="_blank">
               <div class="hover-text">
-                <h4>Escola de Kung Fu Shaolin do Norte</h4>
+                <h4>Curta Lagoa</h4>
                 <p>Web Design</p>
               </div>
-              <img src="img/portfolio/web_escolashaolin.png" class="img-responsive portfolio-item-center" alt="Escola de Kung Fu Shaolin do Norte"> </a> </div>
+              <img src="img/portfolio/web_curtalagoa.png" class="img-responsive portfolio-item-center" alt="Curta Lagoa"> </a> </div>
           </div>
         </div>
 
@@ -213,6 +224,17 @@
           </div>
         </div>
 
+        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 webdesign">
+          <div class="portfolio-item">
+            <div class="hover-bg"> <a href="http://www.phbsolucoescontabeis.com.br" target="_blank">
+              <div class="hover-text">
+                <h4>PHB Soluções Contábeis</h4>
+                <p>Web Design</p>
+              </div>
+              <img src="img/portfolio/web_phbsolucoescontabeis.png" class="img-responsive portfolio-item-center" alt="PHB Soluções Contábeis"> </a> </div>
+          </div>
+        </div>
+
       </div>
     </div>
   </div>
@@ -230,7 +252,7 @@
         <div class="about-text">
           <h3>Hello! :)</h3>
           <p>My name's Patricia Mayumi, nice to meet you!<br>I am a Digital Designer with 6+ years of experience in web services.</p>
-          <p>I develop HTML5 advertising banners, animate motion graphics for social media and design responsive website layouts.</p>
+          <p>I develop HTML5 display banners, animate motion graphics for social media and design responsive website layouts.</p>
           <p>Feel free to <a href="mailto:contact@patriciamayumi.com">contact me</a>!</p>
         </div>
       </div>
