--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
     <div class="section-title text-center center">
       <h2>Portfolio</h2>
       <hr>
+      <p class="banner-info">If you do not see any HTML5 banner, try another browser or disabling any adblock plugin.</p>
       <div class="clearfix"></div>
     </div>
     <div class="categories">
