--- a/index.html
+++ b/index.html
@@ -183,12 +183,12 @@
 
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 webdesign">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="http://www.lagoagastro.com.br" target="_blank">
+            <div class="hover-bg"> <a href="http://www.perfaalimentos.com.br" target="_blank">
               <div class="hover-text">
-                <h4>Lagoa Gastrô</h4>
+                <h4>PERFA Alimentos</h4>
                 <p>Web Design</p>
               </div>
-              <img src="img/portfolio/web_lagoagastro.png" class="img-responsive portfolio-item-center" alt="Lagoa Gastro"> </a> </div>
+              <img src="img/portfolio/web_perfa.png" class="img-responsive portfolio-item-center" alt="Perfa Alimentos"> </a> </div>
           </div>
         </div>
 
