--- a/index.html
+++ b/index.html
@@ -106,6 +106,17 @@
 
       	<div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 banners">
           <div class="portfolio-item">
+            <div class="hover-bg"> <a href="https://patmayumi.github.io/scotia_passport_souvenir_300x600/" target="_blank" title="Red Bull - Stay Fitr">
+              <div class="hover-text">
+                <h4>Scotiabank - Banner 300x600</h4>
+                <p>HTML5 Banner / GWD</p>
+              </div>
+              <img src="img/portfolio/banner_300x250_scotia_passport.jpg" class="img-responsive portfolio-item-center" alt="Scotiabank Passport Visa Visa Infinite"> </a> </div>
+          </div>
+        </div>
+
+      	<div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 banners">
+          <div class="portfolio-item">
             <div class="hover-bg"> <a href="https://patmayumi.github.io/redbull_stayfit_300x600/" target="_blank" title="Red Bull - Stay Fitr">
               <div class="hover-text">
                 <h4>Red Bull - Banner 300x600</h4>
@@ -117,23 +128,23 @@
 
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 banners">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="https://patmayumi.github.io/michelin_300x250/" target="_blank" title="Red Bull - Stay Fitr">
+            <div class="hover-bg"> <a href="https://patmayumi.github.io/scotia_passport_travelbenefit_300x250/" target="_blank" title="Red Bull - Stay Fitr">
               <div class="hover-text">
-                <h4>Michelin - Banner 300x250</h4>
+                <h4>Scotiabank - Banner 300x250</h4>
                 <p>HTML5 Banner / GWD</p>
               </div>
-              <img src="img/portfolio/banner_300x250_michelin.jpg" class="img-responsive portfolio-item-center" alt="Michelin"> </a> </div>
+              <img src="img/portfolio/banner_300x250_scotia_passport.jpg" class="img-responsive portfolio-item-center" alt="Scotiabank Passport Visa Visa Infinite"> </a> </div>
           </div>
         </div>
 
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 banners">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="https://patmayumi.github.io/redbull_amaphiko_970x250/" target="_blank" title="Red Bull - Amaphiko">
+            <div class="hover-bg"> <a href="https://patmayumi.github.io/volvoV60_300x600_940x600/" target="_blank" title="Volvo - Expand Banner">
               <div class="hover-text">
-                <h4>Red Bull - Banner 970x250</h4>
-                <p>HTML5 Banner / GWD</p>
+                <h4>Volvo - Expand Banner</h4>
+                <p>HTML5 Banner / GSAP</p>
               </div>
-              <img src="img/portfolio/banner_300x250_redbull_amaphiko.jpg" class="img-responsive portfolio-item-center" alt="Red Bull"> </a> </div>
+              <img src="img/portfolio/banner_300x250_volvo.jpg" class="img-responsive portfolio-item-center" alt="Volvo"> </a> </div>
           </div>
         </div>
 
@@ -172,12 +183,12 @@
 
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 banners">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="https://patmayumi.github.io/volvoV60_300x600_940x600/" target="_blank" title="Volvo - Expand Banner">
+            <div class="hover-bg"> <a href="https://patmayumi.github.io/scotia_momentum_bcb_728x90/" target="_blank" title="Red Bull - Stay Fitr">
               <div class="hover-text">
-                <h4>Volvo - Expand Banner</h4>
-                <p>HTML5 Banner / GSAP</p>
+                <h4>Scotiabank - Banner 728x90</h4>
+                <p>HTML5 Banner / GWD</p>
               </div>
-              <img src="img/portfolio/banner_300x250_volvo.jpg" class="img-responsive portfolio-item-center" alt="Volvo"> </a> </div>
+              <img src="img/portfolio/banner_300x250_scotia_momentum.jpg" class="img-responsive portfolio-item-center" alt="Scotia Momentum Visa Infinite"> </a> </div>
           </div>
         </div>
 
@@ -189,17 +200,6 @@
                 <p>Web Design</p>
               </div>
               <img src="img/portfolio/web_perfa.png" class="img-responsive portfolio-item-center" alt="Perfa Alimentos"> </a> </div>
-          </div>
-        </div>
-
-        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 banners">
-          <div class="portfolio-item">
-            <div class="hover-bg"> <a href="https://patmayumi.github.io/samsung_familiaB_160x600/" target="_blank" title="Samsung Galaxy J">
-              <div class="hover-text">
-                <h4>Samsung - Banner 160x600</h4>
-                <p>HTML5 Banner / GWD</p>
-              </div>
-              <img src="img/portfolio/banner_300x250_samsung.jpg" class="img-responsive portfolio-item-center" alt="Samsung Galaxy J"> </a> </div>
           </div>
         </div>
 
