--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <h4>Scotiabank - Banner 300x600</h4>
                 <p>HTML5 Banner / GWD</p>
               </div>
-              <img src="img/portfolio/banner_300x250_scotia_passport.jpg" class="img-responsive portfolio-item-center" alt="Scotiabank Passport Visa Visa Infinite"> </a> </div>
+              <img src="img/portfolio/banner_300x250_scotia_souvenir.jpg" class="img-responsive portfolio-item-center" alt="Scotiabank Banner"> </a> </div>
           </div>
         </div>
 
@@ -133,7 +133,7 @@
                 <h4>Scotiabank - Banner 300x250</h4>
                 <p>HTML5 Banner / GWD</p>
               </div>
-              <img src="img/portfolio/banner_300x250_scotia_passport.jpg" class="img-responsive portfolio-item-center" alt="Scotiabank Passport Visa Visa Infinite"> </a> </div>
+              <img src="img/portfolio/banner_300x250_scotia_travel-benefit.jpg" class="img-responsive portfolio-item-center" alt="Scotiabank Banner"> </a> </div>
           </div>
         </div>
 
@@ -188,7 +188,7 @@
                 <h4>Scotiabank - Banner 728x90</h4>
                 <p>HTML5 Banner / GWD</p>
               </div>
-              <img src="img/portfolio/banner_300x250_scotia_momentum.jpg" class="img-responsive portfolio-item-center" alt="Scotia Momentum Visa Infinite"> </a> </div>
+              <img src="img/portfolio/banner_300x250_scotia_feast.jpg" class="img-responsive portfolio-item-center" alt="Scotiabank Banner"> </a> </div>
           </div>
         </div>
 
@@ -200,17 +200,6 @@
                 <p>Web Design</p>
               </div>
               <img src="img/portfolio/web_perfa.png" class="img-responsive portfolio-item-center" alt="Perfa Alimentos"> </a> </div>
-          </div>
-        </div>
-
-        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 webdesign">
-          <div class="portfolio-item">
-            <div class="hover-bg"> <a href="http://www.leveminas.com.br" target="_blank">
-              <div class="hover-text">
-                <h4>Leve Minas</h4>
-                <p>Web Design</p>
-              </div>
-              <img src="img/portfolio/web_leveminas.png" class="img-responsive portfolio-item-center" alt="Leve Minas"> </a> </div>
           </div>
         </div>
 
