--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <ul class="nav navbar-nav">
         <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
         <li class="hidden"> <a href="#page-top"></a> </li>
-        <li> <a href="https://www.artstation.com/patmayumi" target="_blank">Passion Projects</a> </li>
+        <li> <a href="https://www.instagram.com/patmayumi" target="_blank">Passion Projects</a> </li>
         <li> <a class="page-scroll" href="#works">Portfolio</a> </li>
         <li> <a href="https://vimeo.com/372281355" target="_blank">Demo Reel</a> </li>
         <li> <a class="page-scroll" href="#about">About</a> </li>
