--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Patricia Mayumi Yoshiwara | Digital Designer</title>
-<meta name="description" content="Digital designer with 6+ years of experience in web services, specializing in advertising HTML5 banners and UI layouts websites."/>
-<meta name="author" content="Patricia Mayumi Yoshiwara">
+<title>Patricia Mayumi | Digital Designer and 3D Artist</title>
+<meta name="description" content="Digital designer with 6+ years of experience in web services, specializing in advertising HTML5 display banners, motion graphics for social media and 3D illustrations."/>
+<meta name="author" content="Patricia Mayumi">
 
 <!-- Bootstrap -->
 <link rel="stylesheet" type="text/css"  href="css/bootstrap.css">
@@ -94,7 +94,7 @@
           <ol class="type">
             <li><a href="#" data-filter="*" class="active">All</a></li>
             <li><a href="#" data-filter=".banners">HTML5 Banners</a></li>
-            <!-- <li><a href="#" data-filter=".3D">3D</a></li> -->
+            <li><a href="#" data-filter=".3D">3D</a></li>
             <li><a href="#" data-filter=".mograph">Motion Graphics</a></li>
           </ol>
         </li>
@@ -112,6 +112,28 @@
                 <p>HTML5 Banner / GWD</p>
               </div>
               <img src="img/portfolio/banner_300x250_scotia_souvenir.jpg" class="img-responsive portfolio-item-center" alt="Scotiabank Banner"> </a> </div>
+          </div>
+        </div>
+
+        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 3D">
+          <div class="portfolio-item">
+            <div class="hover-bg"> <a href="https://www.instagram.com/p/CONUfdqDYj8/" target="_blank" title="Offred's Room - The Handmaid's Tale">
+              <div class="hover-text">
+                <h4>Offred's Room - The Handmaid's Tale</h4>
+                <p>3D Illustration</p>
+              </div>
+              <img src="img/portfolio/3D_handmaids.jpg" class="img-responsive portfolio-item-center" alt="Offred's Room - The Handmaid's Tale"> </a> </div>
+          </div>
+        </div>
+
+        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 3D">
+          <div class="portfolio-item">
+            <div class="hover-bg"> <a href="https://www.instagram.com/p/CIEk2XhjANq/" target="_blank" title="Turrets - Portal">
+              <div class="hover-text">
+                <h4>Turrets - Portal</h4>
+                <p>3D Illustration</p>
+              </div>
+              <img src="img/portfolio/3D_Turret.jpg" class="img-responsive portfolio-item-center" alt="Turrets - Portal"> </a> </div>
           </div>
         </div>
 
@@ -137,6 +159,17 @@
           </div>
         </div>
 
+        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 3D">
+          <div class="portfolio-item">
+            <div class="hover-bg"> <a href="https://www.instagram.com/p/BjqiLqIFWAs/" target="_blank" title="Mordecai - Regular Show">
+              <div class="hover-text">
+                <h4>Mordecai - Regular Show</h4>
+                <p>3D Illustration</p>
+              </div>
+              <img src="img/portfolio/3D_Mordecai.jpg" class="img-responsive portfolio-item-center" alt="Mordecai - Regular Show"> </a> </div>
+          </div>
+        </div>
+
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 banners">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="https://patmayumi.github.io/volvoV60_300x600_940x600/" target="_blank" title="Volvo - Expand Banner">
@@ -156,6 +189,17 @@
                 <p>HTML5 Banner / GSAP</p>
               </div>
               <img src="img/portfolio/banner_300x250_redbull_man.jpg" class="img-responsive portfolio-item-center" alt="Red Bull"> </a> </div>
+          </div>
+        </div>
+
+        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 3D">
+          <div class="portfolio-item">
+            <div class="hover-bg"> <a href="https://www.instagram.com/p/BlEY3amB46x/" target="_blank" title="Big Dog - 2 Stupid Dogs">
+              <div class="hover-text">
+                <h4>Big Dog - 2 Stupid Dogs</h4>
+                <p>3D Illustration</p>
+              </div>
+              <img src="img/portfolio/3D_BigDog.jpg" class="img-responsive portfolio-item-center" alt="Big Dog - 2 Stupid Dogs"> </a> </div>
           </div>
         </div>
 
