--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <ul class="nav navbar-nav">
         <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
         <li class="hidden"> <a href="#page-top"></a> </li>
-        <li> <a href="https://www.instagram.com/patmayumi" target="_blank">Passion Projects</a> </li>
+        <li> <a href="https://www.artstation.com/patmayumi" target="_blank">Passion Projects</a> </li>
         <li> <a class="page-scroll" href="#works">Portfolio</a> </li>
         <li> <a href="https://vimeo.com/372281355" target="_blank">Demo Reel</a> </li>
         <li> <a class="page-scroll" href="#about">About</a> </li>
@@ -117,7 +117,7 @@
 
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 3D">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="https://www.instagram.com/p/CONUfdqDYj8/" target="_blank" title="Offred's Room - The Handmaid's Tale">
+            <div class="hover-bg"> <a href="https://www.artstation.com/artwork/Vy1ye4" target="_blank" title="Offred's Room - The Handmaid's Tale">
               <div class="hover-text">
                 <h4>Offred's Room - The Handmaid's Tale</h4>
                 <p>3D Illustration</p>
@@ -128,7 +128,7 @@
 
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 3D">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="https://www.instagram.com/p/CIEk2XhjANq/" target="_blank" title="Turrets - Portal">
+            <div class="hover-bg"> <a href="https://www.artstation.com/artwork/k41XGn" target="_blank" title="Turrets - Portal">
               <div class="hover-text">
                 <h4>Turrets - Portal</h4>
                 <p>3D Illustration</p>
@@ -161,7 +161,7 @@
 
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 3D">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="https://www.instagram.com/p/BjqiLqIFWAs/" target="_blank" title="Mordecai - Regular Show">
+            <div class="hover-bg"> <a href="https://www.artstation.com/artwork/GXWqVV" target="_blank" title="Mordecai - Regular Show">
               <div class="hover-text">
                 <h4>Mordecai - Regular Show</h4>
                 <p>3D Illustration</p>
@@ -194,7 +194,7 @@
 
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 3D">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="https://www.instagram.com/p/BlEY3amB46x/" target="_blank" title="Big Dog - 2 Stupid Dogs">
+            <div class="hover-bg"> <a href="https://www.artstation.com/artwork/ybmZqO" target="_blank" title="Big Dog - 2 Stupid Dogs">
               <div class="hover-text">
                 <h4>Big Dog - 2 Stupid Dogs</h4>
                 <p>3D Illustration</p>
@@ -253,7 +253,7 @@
         <div class="about-text">
           <h3>Hello! :)</h3>
           <p>My name's Patricia Mayumi, nice to e-meet you!<br>I am a Digital Designer with 6+ years of experience in web services.</p>
-          <p>I develop HTML5 display banners, animate motion graphics for social media and create 3D illustrations.</p>
+          <p>I develop HTML5 display banners, animate motion graphics for social media and digital screens, and create 3D illustrations.</p>
           <p>Feel free to <a href="mailto:contact@patriciamayumi.com">contact me</a>!</p>
         </div>
       </div>
@@ -266,7 +266,7 @@
             <li>GSAP (GreenSock API)</li>
             <li>Adobe Animate / Flash</li>
             <li>Adobe After Effects</li>
-            <li>Adobe Premiere</li>
+            <li>Figma</li>
             <li>ZBrush</li>
             <li>Blender 3D</li>
             <li>C4D</li>
@@ -287,7 +287,8 @@
         <ul>
           <li><a href="mailto:contact@patriciamayumi.com"><i class="fas fa-envelope"></i></a></li>
           <li><a href="https://www.linkedin.com/in/patmayumi/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
-          <li><a href="https://dribbble.com/patmayumi" target="_blank"><i class="fas fa-basketball-ball"></i></a></li>
+          <li><a href="https://www.artstation.com/patmayumi" target="_blank"><i class="fab fa-brands fa-artstation"></i></a></li>
+          <li><a href="https://www.instagram.com/patmayumi" target="_blank"><i class="fab fa-brands fa-instagram"></i></a></li>
         </ul>
       </div>
     </div>
@@ -295,7 +296,7 @@
 </div>
 <div id="footer">
   <div class="container">
-    <p>Copyright &copy; 2021.</p>
+    <p>Copyright &copy; 2023.</p>
   </div>
 </div>
 
